[metadata]
name = ljl
version = attr: ljl.__version__
description = launch.json launcher
long_description = file: README.md
license = MIT License
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = ljl
install_requires =
  json5

[options.entry_points]
console_scripts =
    ljl = ljl:main
